todo-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
